# stabilitygaurd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: performance_overhead.py
examples/: advanced_logging_example.py  distributed_example.py  gpt2_pretrain.py  llama_finetune.py  mixed_precision_example.py  quickstart.ipynb  rlhf_example.py  v0.2.0_features.py
stabilityguard/: __init__.py
stabilityguard/core/: __init__.py  actions.py  auto_calibration.py  edge_of_stability.py  guarded_optimizer.py  helene_clipper.py  hooks.py  snapshot.py  spam_optimizer.py  spike_detector.py
stabilityguard/distributed/: __init__.py  deepspeed_guard.py  distributed_optimizer.py  fsdp_guard.py  spike_detector.py
stabilityguard/integrations/: huggingface.py  mlflow.py  wandb.py
stabilityguard/logging/: __init__.py  activation_stats.py  advanced_logger.py  checkpoint_scorer.py  gradient_flow.py  weight_updates.py
stabilityguard/precision/: __init__.py  loss_scaler.py  mixed_precision_guard.py  precision_monitor.py
stabilityguard/rlhf/: __init__.py  kl_monitor.py  ppo_ratio.py  reward_collapse.py  rlhf_guard.py  value_divergence.py
stabilityguard/utils/: logging.py  model_utils.py
tests/: test_distributed.py  test_guarded_optimizer.py  test_integration.py  test_logging.py  test_nan_handling.py  test_precision.py  test_rlhf_monitors.py  test_spike_detection.py
