[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stabilityguard"
version = "0.1.1"
description = "One-line circuit breaker for PyTorch training — catches NaN gradients, logs spikes, prevents model corruption."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ashwin", email = "ashwinmsad@gmail.com"}
]
keywords = ["pytorch", "training", "stability", "gradient", "monitoring", "llm", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15"]
mlflow = ["mlflow>=2.0"]
huggingface = ["transformers>=4.30"]
all = ["wandb>=0.15", "mlflow>=2.0", "transformers>=4.30"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/ashwinmsad1/stabilityguard"
Documentation = "https://github.com/ashwinmsad1/stabilityguard#readme"
Repository = "https://github.com/ashwinmsad1/stabilityguard"
Issues = "https://github.com/ashwinmsad1/stabilityguard/issues"

[tool.setuptools.packages.find]
include = ["stabilityguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
